--- a/starter/app/src/main/res/layout/fragment_detail.xml
+++ b/starter/app/src/main/res/layout/fragment_detail.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:background="@color/app_background">
 
+        <!-- Hazardousness image -->
         <ImageView
             android:id="@+id/activity_main_image_of_the_day"
             android:layout_width="match_parent"
@@ -39,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <!-- Close approach date -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -67,6 +69,7 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
+                    <!-- Absolute magnitude -->
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -98,6 +101,7 @@
 
                 </LinearLayout>
 
+                <!-- Estimated diameter -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -114,6 +118,7 @@
                     app:kmUnitText="@{asteroid.estimatedDiameter}"
                     tools:text="0.82 km" />
 
+                <!-- Relative velocity  -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -130,6 +135,7 @@
                     app:velocityText="@{asteroid.relativeVelocity}"
                     tools:text="11.9 km/s" />
 
+                <!-- Distance from earth -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
