--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -55,7 +55,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/asteroid_recycler"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/list_item"
+            tools:listitem="@layout/asteroid_list_item"
             app:listData="@{viewModel.asteroidList}"
 
             android:layout_width="0dp"
