--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -56,7 +56,7 @@
             android:id="@+id/asteroid_recycler"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/asteroid_list_item"
-            app:listData="@{viewModel.asteroidList}"
+            app:listData="@{viewModel.asteroids}"
 
             android:layout_width="0dp"
             android:layout_height="0dp"
