Add AsteroidListAdapter.kt (inspired by gdg finder)
Add clickListener to asteroid_list_item.xml
Add BindingAdapter asteroidList

Comment other BindingAdapters

--- a/starter/app/src/main/res/layout/asteroid_list_item.xml
+++ b/starter/app/src/main/res/layout/asteroid_list_item.xml
@@ -12,11 +12,11 @@
         <variable
             name="asteroid"
             type="com.udacity.asteroidradar.Asteroid" />
-        <!-- Currently we tell type but not source of data -->
 
-        <!--        <variable-->
-        <!--            name="clickListener"-->
-        <!--            type="com.example.android.gdgfinder.search.GdgClickListener"/>-->
+        <!-- Currently we tell type but not source of data -->
+        <variable
+            name="clickListener"
+            type="com.udacity.asteroidradar.main.AsteroidClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
