Complete navigation from overview to detail view
Add AsteroidRadarApplication to manifest
Add logs
Complete navigation from overview to detail view
- add observables in view model
- start navigation in fragment
- use onClick in layout

--- a/starter/app/src/main/res/layout/asteroid_list_item.xml
+++ b/starter/app/src/main/res/layout/asteroid_list_item.xml
@@ -16,14 +16,14 @@
         <!-- Currently we tell type but not source of data -->
         <variable
             name="clickListener"
-            type="com.udacity.asteroidradar.main.AsteroidClickListener" />
+            type="com.udacity.asteroidradar.main.AsteroidListAdapter.OnClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:onClick="@{() -> clickListener.onClick(asteroid)}"
         android:layout_width="match_parent"
         android:layout_height="160dp">
 
-        <!--    android:onClick="@{() -> clickListener.onClick(chapter)}"-->
         <TextView
             android:id="@+id/codename_textview"
             android:text="@{asteroid.codename}"
