--- a/starter/app/src/main/res/layout/asteroid_list_item.xml
+++ b/starter/app/src/main/res/layout/asteroid_list_item.xml
@@ -68,7 +68,7 @@
 
         <ImageView
             android:id="@+id/asteroid_safety_imageview"
-            app:srcCompat="@drawable/ic_status_potentially_hazardous"
+            statusIcon="@{asteroid.potentiallyHazardous}"
             android:contentDescription="@string/icon_asteroid_safety_description"
 
             android:layout_width="wrap_content"
