Show date without time in main and detail list
add and use BindingAdapter dateWithoutTime

--- a/starter/app/src/main/res/layout/asteroid_list_item.xml
+++ b/starter/app/src/main/res/layout/asteroid_list_item.xml
@@ -44,7 +44,7 @@
 
         <TextView
             android:id="@+id/close_approach_date_textview"
-            android:text="@{asteroid.closeApproachDate.toLocaleString()}"
+            dateWithoutTime="@{asteroid.closeApproachDate}"
             tools:text="2020-02-08"
 
             android:layout_width="0dp"
