Arrange talk back
Add list item content description for asteroid list (talk back)
arrange talk back for asteroid detail page
add binding adapters for talk back

--- a/starter/app/src/main/res/layout-v28/fragment_detail.xml
+++ b/starter/app/src/main/res/layout-v28/fragment_detail.xml
@@ -46,8 +46,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    closeApproachDateDescription="@{asteroid}"
-                    android:focusable="true">
+                    android:screenReaderFocusable="true"
+                    closeApproachDateDescription="@{asteroid}">
 
                     <TextView
                         android:text="@string/close_approach_data_title"
@@ -55,7 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/default_text_color"
-                        android:focusable="false" />
+                        android:screenReaderFocusable="false" />
 
                     <TextView
                         android:id="@+id/close_approach_date"
@@ -65,7 +65,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:textColor="@color/default_text_color"
-                        android:focusable="false" />
+                        android:screenReaderFocusable="false" />
                 </LinearLayout>
 
                 <!-- Absolute magnitude -->
@@ -75,41 +75,41 @@
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:focusable="true"
                     absoluteMagnitudeDescription="@{asteroid}">
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:screenReaderFocusable="true">
 
                         <TextView
                             android:text="@string/absolute_magnitude_title"
+                            android:labelFor="@+id/absolute_magnitude"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/default_text_color"
-                            android:focusable="false" />
+                            android:screenReaderFocusable="false" />
 
                         <TextView
                             android:id="@+id/absolute_magnitude"
                             app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
+                            tools:text="25.126 au"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                             android:textColor="@color/default_text_color"
-                            tools:text="25.126 au"
-                            android:focusable="false" />
+                            android:screenReaderFocusable="false" />
                     </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/help_button"
+                        android:id="@+id/astronomicalUnit_help_button"
                         android:contentDescription="@string/astronomicalUnit_help_button_content_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
-                        app:srcCompat="@drawable/ic_help_circle"
-                        android:focusable="true" />
+                        app:srcCompat="@drawable/ic_help_circle" />
 
                 </LinearLayout>
 
@@ -118,7 +118,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:focusable="true"
+                    android:screenReaderFocusable="true"
                     estimatedDiameterDescription="@{asteroid}">
 
                     <TextView
@@ -128,7 +128,7 @@
                         android:layout_marginTop="16dp"
                         android:labelFor="@+id/estimated_diameter"
                         android:textColor="@color/default_text_color"
-                        android:focusable="false" />
+                        android:screenReaderFocusable="false" />
 
                     <TextView
                         android:id="@+id/estimated_diameter"
@@ -138,7 +138,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:textColor="@color/default_text_color"
-                        android:focusable="false" />
+                        android:screenReaderFocusable="false" />
                 </LinearLayout>
 
                 <!-- Relative velocity  -->
