--- a/starter/app/src/main/res/layout/asteroid_list_item.xml
+++ b/starter/app/src/main/res/layout/asteroid_list_item.xml
@@ -19,48 +19,49 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:onClick="@{() -> clickListener.onClick(asteroid)}"
         android:layout_width="match_parent"
-        android:layout_height="160dp">
+        android:layout_height="70dp"
+        android:onClick="@{() -> clickListener.onClick(asteroid)}">
 
         <TextView
             android:id="@+id/codename_textview"
-            tools:text="(2016 BA39)"
             android:text="@{asteroid.codename}"
-
+            tools:text="(2016 BA39)"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/spacing_normal"
-            android:layout_marginTop="@dimen/spacing_normal"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toTopOf="@id/close_approach_date_textview"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
-            android:background="@android:color/darker_gray"
-            android:textColor="@android:color/white" />
+            android:background="@color/primaryDarkColor"
+            style="@style/TextTitle"
+            android:textAlignment="gravity"
+            android:gravity="bottom|center_vertical" />
 
         <TextView
             android:id="@+id/close_approach_date_textview"
-            tools:text="2020-02-08"
             dateWithoutTime="@{asteroid.closeApproachDate}"
+            tools:text="2020-02-08"
 
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/spacing_normal"
             android:layout_marginStart="@dimen/spacing_normal"
             android:layout_marginEnd="@dimen/spacing_normal"
-
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:gravity="top|center_vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/codename_textview"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            android:gravity="center_vertical"
 
-            android:background="@android:color/holo_blue_dark"
-            android:textColor="@android:color/white" />
+            style="@style/Date_MainView"
+            android:background="@color/primaryDarkColor" />
 
         <ImageView
             android:id="@+id/asteroid_safety_imageview"
@@ -69,15 +70,10 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginEnd="@dimen/spacing_normal"
-
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:layout_marginEnd="@dimen/spacing_normal" />
 
-
-        <!--        android:layout_marginBottom="@dimen/spacing_normal"-->
-        <!--        android:layout_marginTop="@dimen/spacing_normal"-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
