--- a/starter/app/src/main/res/values/colors.xml
+++ b/starter/app/src/main/res/values/colors.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#010613</color>
-    <color name="colorPrimaryDark">#010613</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF8282</color>
     <color name="app_background">#010613</color>
-    <color name="default_text_color">#FFFFFF</color>
+    <color name="default_text_color">#ffffff</color>
+    <!--    <color name="text_grey">#484848</color>-->
     <color name="text_grey">#D2D2D2</color>
     <color name="potentially_hazardous">#FF8282</color>
+
+    <!--    colors chosen by peter -->
+    <color name="primaryColor">#212121</color>
+    <color name="primaryLightColor">#484848</color>
+    <color name="primaryDarkColor">#000000</color>
+    <color name="primaryTextColor">#ffffff</color>
+
+    <!--    <color name="colorPrimary">#010613</color>-->
+    <!--    <color name="colorPrimaryDark">#010613</color>-->
+    <!--    <color name="colorAccent">#FF8282</color>-->
+    <!--    <color name="app_background">#010613</color>-->
+    <!--    <color name="default_text_color">#FFFFFF</color>-->
+    <!--    <color name="text_grey">#D2D2D2</color>-->
+    <!--    <color name="potentially_hazardous">#FF8282</color>-->
 </resources>
